--- a/navbar.css
+++ b/navbar.css
@@ -107,9 +107,9 @@ html{
     .nho{
       padding: 0px;
     }
-/*      .fa-caret-down{
+     .fa-caret-down{
         display: none;
-    } */
+    }
     .dropdown__list{
 /*         width: 30%; */
         margin-top: 1.5rem;
